--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       POSTGRES_PASSWORD: test_password
       POSTGRES_USER: test_user
       POSTGRES_DB: test_db
+    volumes:
+      - postgres-data-volume:/var/lib/postgresql/data
+
+volumes:
+  postgres-data-volume:
+    name: postgres-data-volume
+    driver: local
