--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 services:
+
+  nginx:
+    image: nginx
+    ports:
+      - "8002:80"
+    volumes:
+      - ./nginx/html:/usr/share/nginx/html
+      - ./nginx/conf.d:/etc/nginx/conf.d
+    depends_on:
+      - web
+
   web:
     build: .
     ports:
       - "8001:8001"
     depends_on:
       - postgres
+
   postgres:
     image: postgres
     ports:
